--- a/vn-ehealth-hl7-fhir-core/pom.xml
+++ b/vn-ehealth-hl7-fhir-core/pom.xml
@@ -31,6 +31,18 @@
          <version>${hapi-fhir-version}</version>
      </dependency>
      
+     <dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-core</artifactId>
+	    <version>2.9.9</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-annotations</artifactId>
+	    <version>2.9.9</version>
+	</dependency>
+     
   </dependencies>
   <build>
         <plugins>
