--- a/vn-ehealth-hl7-fhir/pom.xml
+++ b/vn-ehealth-hl7-fhir/pom.xml
@@ -3,28 +3,22 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.8.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
     <groupId>vn.ehealth</groupId>
     <artifactId>vn-ehealth-hl7-fhir</artifactId>
     <version>1.0</version>
     <name>vn-ehealth-hl7-fhir</name>
-    <description>vn-ehealth-hl7-fhir</description>
-
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.8.RELEASE</version>
-    </parent>
 
     <properties>
-        <start-class>vn.ehealth.hl7.fhir.Application</start-class>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring-boot-version>2.1.8.RELEASE</spring-boot-version>
-        <hapi-fhir-version>4.0.0</hapi-fhir-version>
         <java.version>11</java.version>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
+        <hapi-fhir-version>4.0.0</hapi-fhir-version>
     </properties>
 
     <dependencies>
