--- a/vn-ehealth-emr-service/src/main/resources/application.properties
+++ b/vn-ehealth-emr-service/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.username=test2
 spring.data.mongodb.password=abc@123
 spring.data.mongodb.database=openmrs2
+logging.level.org.springframework.data.mongodb.core.index=OFF
 
 spring.jackson.time-zone: Asia/Ho_Chi_Minh
 #spring.jackson.deserialization.adjust_dates_to_context_time_zone=false
