--- a/vn-ehealth-emr-service/src/main/resources/code_systems.properties
+++ b/vn-ehealth-emr-service/src/main/resources/code_systems.properties
@@ -19,5 +19,5 @@ loai_kham_benh = https://fhir.emr.vn.com/LOAI_BENH_AN-v1.0
 
 chung_chi_hanh_nghe = "https://www.moh.gov.vn/ProviderRegistry/Provider-identifier"
 
-loai_chandoan_hinhanh = https://fhir.emr.com.vn/CodeSystem/DMDVKyThuat
+dich_vu_ky_thuat = https://fhir.emr.com.vn/CodeSystem/DMDVKyThuat
 chandoan_hinhanh = http://hl7.org/fhir/ValueSet/diagnostic-service-sections
