--- a/vn-ehealth-emr-service/src/main/resources/application.properties
+++ b/vn-ehealth-emr-service/src/main/resources/application.properties
@@ -6,11 +6,14 @@ app.jwtExpirationInMs=604800000
 spring.servlet.multipart.enabled=true
 
 #Mongo
-spring.data.mongodb.host=34.87.24.163
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.username=test2
-spring.data.mongodb.password=abc@123
-spring.data.mongodb.database=openmrs2
+
+#spring.data.mongodb.host=34.87.24.163
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.username=test2
+#spring.data.mongodb.password=abc@123
+spring.data.mongodb.database=openmrs
 logging.level.org.springframework.data.mongodb.core.index=OFF
 
 spring.jackson.time-zone: Asia/Ho_Chi_Minh
