--- a/vn-ehealth-emr-service/src/main/resources/code_systems.properties
+++ b/vn-ehealth-emr-service/src/main/resources/code_systems.properties
@@ -21,3 +21,5 @@ chung_chi_hanh_nghe = "https://www.moh.gov.vn/ProviderRegistry/Provider-identifi
 
 dich_vu_ky_thuat = https://fhir.emr.com.vn/CodeSystem/DMDVKyThuat
 chandoan_hinhanh = http://hl7.org/fhir/ValueSet/diagnostic-service-sections
+
+vaitro_pttt = https://fhir.emr.com.vn/CodeSystem/DMVaiTroPTTT
