--- a/vn-ehealth-emr-service/src/main/resources/code_systems.properties
+++ b/vn-ehealth-emr-service/src/main/resources/code_systems.properties
@@ -1,16 +1,11 @@
-so_the_bhyt = https://www.moh.gov.vn/PatientRegistry/Patient-identifier
-id_his =  https://www.moh.gov.vn/OtherSystems
-gioi_tinh = https://fhir.emr.vn.com/Gender-v1.0
-tongiao = https://fhir.emr.vn.com/RaceCategory-v1.0
-dantoc = https://fhir.emr.vn.com/EthnicCategory-v1.0
-nghe_nghiep = https://fhir.emr.vn.com/JobCategory-v1.0
-doituong_taichinh = https://fhir.emr.vn.com/PatientCategory-v1.0
+cmnd = vn:nation:ids:national_id
+the_bhyt = https://www.moh.gov.vn/PatientRegistry/Patient-identifier
 
-dvhc_xa_phuong = https://fhir.emr.vn.com/DVHC-XA_PHUONG
-dvhc_quan_huyen = https://fhir.emr.vn.com/DVHC-QUAN_HUYEN
-dvhc_tinh_thanh = https://fhir.emr.vn.com/DVHC-TINH_THANH
-
-quoc_gia = https://fhir.emr.vn.com/QUOC_GIA
+dvhc = https://fhir.emr.com.vn/DiaDdanhHanhChinh-v1.0
+tongiao = https://teminology.emr.com.vn/CodeSystem/DanhMuc-TonGiao-v1.0
+dantoc = https://teminology.emr.com.vn/CodeSystem/DanhMuc-DanToc-v1.0
+nghe_nghiep = https://teminology.emr.com.vn/CodeSystem/DanhMuc-NgheNghiep-v1.0
+quoc_gia = https://teminology.emr.com.vn/CodeSystem/DanhMuc-QuocGia-v1.0
 
 co_so_kham_benh = https://fhir.emr.vn.com/Provider-v1.0
 khoa_dieu_tri = https://fhir.emr.vn.com/DMKhoaDieuTri-v1.0
