--- a/vn-ehealth-emr-service/src/main/resources/extension_urls.properties
+++ b/vn-ehealth-emr-service/src/main/resources/extension_urls.properties
@@ -1,1 +1,9 @@
+# Thong tin ca nhan
+dvhc = https://fhir.emr.com.vn/StructureDefinition/Extension-DiaDanhHanhChinh-v1.0
+dantoc = https://fhir.emr.com.vn/StructureDefinition/Extension-Race-v1.0
+tongiao = https://fhir.emr.com.vn/StructureDefinition/Extension-Ethic-v1.0
+nghe_nghiep = https://fhir.emr.com.vn/StructureDefinition/Extension-EmploymentTitle-v1.0
+quoctich = https://fhir.emr.com.vn/StructureDefinition/Extension-Nationality-v1.0
+ 	  
+# Phau thuat thu thuat 	  
 pttt.trinhtu = https://fhir.emr.com.vn/StructureDefinition/Extension-ProcedureExplaination-v1.0
