API để nhận bản tin thông tin giải phẫu bệnh,

--- a/vn-ehealth-emr-service/src/main/resources/code_systems.properties
+++ b/vn-ehealth-emr-service/src/main/resources/code_systems.properties
@@ -18,3 +18,6 @@ dich_vu_ky_thuat = https://fhir.emr.com.vn/CodeSystem/DMDVKyThuat
 loai_dich_vu_ky_thuat = http://hl7.org/fhir/ValueSet/diagnostic-service-sections
 
 vaitro_pttt = https://fhir.emr.com.vn/CodeSystem/DMVaiTroPTTT
+
+#chua co, BA them sau
+vi_tri_mau_sinh_thiet = chua co
