--- a/vn-ehealth-emr-service/src/main/resources/extension_urls.properties
+++ b/vn-ehealth-emr-service/src/main/resources/extension_urls.properties
@@ -7,3 +7,8 @@ quoctich = https://fhir.emr.com.vn/StructureDefinition/Extension-Nationality-v1.
  	  
 # Phau thuat thu thuat 	  
 pttt.trinhtu = https://fhir.emr.com.vn/StructureDefinition/Extension-ProcedureExplaination-v1.0
+
+#giai phau benh
+#BA bo sung 2 gia tri daithe, vithe
+gpb.daithe = dai the
+gpb.vithe = vi the
