--- a/vn-ehealth-emr-service/pom.xml
+++ b/vn-ehealth-emr-service/pom.xml
@@ -17,6 +17,8 @@
 		<java.version>11</java.version>
 		<maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
+        <thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
+    	<thymeleaf-layout-dialect.version>2.2.1</thymeleaf-layout-dialect.version>
 	</properties>
 
 	<dependencies>
@@ -48,10 +50,15 @@
 		</dependency>
 		
 		<dependency>
+	        <groupId>org.thymeleaf</groupId>
+	        <artifactId>thymeleaf</artifactId>
+	    </dependency>
+	    
+		<dependency>
             <groupId>vn.ehealth</groupId>
-            <artifactId>vn-ehealth-hl7-fhir-dao-r4</artifactId>
+            <artifactId>vn-ehealth-hl7-fhir</artifactId>
             <version>1.0</version>
-        </dependency>        
+        </dependency>
         
 		<dependency>
 		    <groupId>net.sf.jasperreports</groupId>
