--- a/vn-ehealth-emr-service/src/main/resources/code_systems.properties
+++ b/vn-ehealth-emr-service/src/main/resources/code_systems.properties
@@ -1,18 +1,12 @@
-cmnd = vn:nation:ids:national_id
-the_bhyt = https://www.moh.gov.vn/PatientRegistry/Patient-identifier
-
 dvhc = https://fhir.emr.com.vn/DiaDdanhHanhChinh-v1.0
 tongiao = https://teminology.emr.com.vn/CodeSystem/DanhMuc-TonGiao-v1.0
 dantoc = https://teminology.emr.com.vn/CodeSystem/DanhMuc-DanToc-v1.0
 nghe_nghiep = https://teminology.emr.com.vn/CodeSystem/DanhMuc-NgheNghiep-v1.0
 quoc_gia = https://teminology.emr.com.vn/CodeSystem/DanhMuc-QuocGia-v1.0
+loai_to_chuc = https://teminology.emr.com.vn/CodeSystem/LoaiToChuc-v1.0
 
-co_so_kham_benh = https://fhir.emr.vn.com/Provider-v1.0
 khoa_dieu_tri = https://fhir.emr.vn.com/DMKhoaDieuTri-v1.0
-dot_kham_benh = https://fhir.emr.vn.com/HSBA-v1.0
 loai_kham_benh = https://fhir.emr.vn.com/LOAI_BENH_AN-v1.0
-
-chung_chi_hanh_nghe = "https://www.moh.gov.vn/ProviderRegistry/Provider-identifier"
 
 dich_vu_ky_thuat = https://fhir.emr.com.vn/CodeSystem/DMDVKyThuat
 loai_dich_vu_ky_thuat = http://hl7.org/fhir/ValueSet/diagnostic-service-sections
