--- a/vn-ehealth-emr-service/src/main/resources/extension_urls.properties
+++ b/vn-ehealth-emr-service/src/main/resources/extension_urls.properties
@@ -10,5 +10,5 @@ pttt.trinhtu = https://fhir.emr.com.vn/StructureDefinition/Extension-ProcedureEx
 
 #giai phau benh
 #BA bo sung 2 gia tri daithe, vithe
-gpb.daithe = dai the
-gpb.vithe = vi the
+gpb.daithe = https://fhir.emr.com.vn/StructureDefinition/Extension-GpbDaiThe-v1.0
+gpb.vithe = https://fhir.emr.com.vn/StructureDefinition/Extension-GpbViThe-v1.0
