--- a/vn-ehealth-hl7-fhir/pom.xml
+++ b/vn-ehealth-hl7-fhir/pom.xml
@@ -100,23 +100,11 @@
     </dependencies>
 
     <build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-war-plugin</artifactId>
-	            <configuration>
-	                <overlays>
-	                    <overlay>
-	                        <groupId>ca.uhn.hapi.fhir</groupId>
-	                        <artifactId>hapi-fhir-testpage-overlay</artifactId>
-	                    </overlay>
-	                </overlays>
-	            </configuration>
-	        </plugin>
-		</plugins>
-	</build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
