--- a/vn-ehealth-hl7-fhir/src/main/resources/application.properties
+++ b/vn-ehealth-hl7-fhir/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.servlet.multipart.enabled=true
 #Mongo
 spring.data.mongodb.host=34.87.24.163
 spring.data.mongodb.port=27017
-spring.data.mongodb.username=test2
+spring.data.mongodb.username=fhir
 spring.data.mongodb.password=abc@123
-spring.data.mongodb.database=openmrs2
+spring.data.mongodb.database=fhir
 
 spring.jackson.time-zone: Asia/Ho_Chi_Minh
 #spring.jackson.deserialization.adjust_dates_to_context_time_zone=false
