--- a/vn-ehealth-emr-service/src/main/resources/code_systems.properties
+++ b/vn-ehealth-emr-service/src/main/resources/code_systems.properties
@@ -1,9 +1,11 @@
+gioi_tinh=http://hl7.org/fhir/ValueSet/gender
 dvhc = https://fhir.emr.com.vn/DiaDdanhHanhChinh-v1.0
 tongiao = https://teminology.emr.com.vn/CodeSystem/DanhMuc-TonGiao-v1.0
 dantoc = https://teminology.emr.com.vn/CodeSystem/DanhMuc-DanToc-v1.0
 nghe_nghiep = https://teminology.emr.com.vn/CodeSystem/DanhMuc-NgheNghiep-v1.0
 quoc_gia = https://teminology.emr.com.vn/CodeSystem/DanhMuc-QuocGia-v1.0
 loai_to_chuc = https://teminology.emr.com.vn/CodeSystem/LoaiToChuc-v1.0
+encounter_type = https://teminology.emr.com.vn/CodeSystem/EncounterType-v1.0
 
 khoa_dieu_tri = https://fhir.emr.vn.com/DMKhoaDieuTri-v1.0
 loai_kham_benh = https://fhir.emr.vn.com/LOAI_BENH_AN-v1.0
