--- a/vn-ehealth-hl7-fhir-core/pom.xml
+++ b/vn-ehealth-hl7-fhir-core/pom.xml
@@ -31,25 +31,12 @@
          <version>${hapi-fhir-version}</version>
      </dependency>
      
-     <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-	<dependency>
-	    <groupId>com.fasterxml.jackson.core</groupId>
-	    <artifactId>jackson-databind</artifactId>
-	    <version>2.9.9</version>
-	</dependency>
-     
      <dependency>
-	    <groupId>com.fasterxml.jackson.core</groupId>
-	    <artifactId>jackson-core</artifactId>
-	    <version>2.9.9</version>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-web</artifactId>
+		<version>2.1.8.RELEASE</version>
 	</dependency>
-	
-	<dependency>
-	    <groupId>com.fasterxml.jackson.core</groupId>
-	    <artifactId>jackson-annotations</artifactId>
-	    <version>2.9.9</version>
-	</dependency>
-     
+	 
   </dependencies>
   <build>
         <plugins>
