--- a/vn-ehealth-emr-service/src/main/resources/application.properties
+++ b/vn-ehealth-emr-service/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.data.mongodb.port=27017
 
 #spring.data.mongodb.host=34.87.24.163
 #spring.data.mongodb.port=27017
-#spring.data.mongodb.username=test2
+#spring.data.mongodb.username=fhir
 #spring.data.mongodb.password=abc@123
 spring.data.mongodb.database=openmrs2
 #logging.level.org.springframework.data.mongodb.core.index=OFF
