--- a/vn-ehealth-hl7-fhir-core/pom.xml
+++ b/vn-ehealth-hl7-fhir-core/pom.xml
@@ -8,6 +8,11 @@
   <packaging>jar</packaging>
 
   <name>vn-ehealth-hl7-fhir-core</name>
+  <parent>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-parent</artifactId>
+      <version>2.1.8.RELEASE</version>
+  </parent>
 
   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,6 +21,7 @@
         <java.version>11</java.version>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
+        <spring-boot-version>2.1.8.RELEASE</spring-boot-version>
     </properties>
 
   <dependencies>
@@ -34,9 +40,12 @@
      <dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-web</artifactId>
-		<version>2.1.8.RELEASE</version>
 	</dependency>
-	 
+	
+     <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-data-mongodb</artifactId>
+     </dependency>	
   </dependencies>
   <build>
         <plugins>
