--- a/vn-ehealth-hl7-fhir/pom.xml
+++ b/vn-ehealth-hl7-fhir/pom.xml
@@ -83,6 +83,13 @@
         </dependency>
         
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        
+        <dependency>
 	        <groupId>ca.uhn.hapi.fhir</groupId>
 	        <artifactId>hapi-fhir-testpage-overlay</artifactId>
 	        <version>${hapi-fhir-version}</version>
