--- a/vn-ehealth-emr-service/src/main/resources/application.properties
+++ b/vn-ehealth-emr-service/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jackson.serialization.indent_output=true
 
 spring.data.mongodb.host=emr.com.vn
 spring.data.mongodb.port=27017
-spring.data.mongodb.username=enr
+spring.data.mongodb.username=emr
 spring.data.mongodb.password=abc@123
 spring.data.mongodb.database=emr
 #logging.level.org.springframework.data.mongodb.core.index=OFF
