--- a/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
+++ b/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
@@ -14,7 +14,8 @@ loai_dich_vu_ky_thuat = http://hl7.org/fhir/ValueSet/diagnostic-service-sections
 vaitro_pttt = https://fhir.emr.com.vn/CodeSystem/DMVaiTroPTTT
 chiso_xetnghiem = https://fhir.emr.com.vn/CodeSystem/DMChiSoXetNghiem
 
-#chua co, BA them sau
+dich_ket_qua_xet_nghiem=https://fhir.emr.com.vn/CodeSystem/DMDichKetQuaXetNghiem
+
 vi_tri_mau_sinh_thiet = https://fhir.emr.com.vn/CodeSystem/DMViTriMauSinhThiet
 
 #chua co
