--- a/vn-ehealth-emr-service/pom.xml
+++ b/vn-ehealth-emr-service/pom.xml
@@ -34,29 +34,19 @@
 		</dependency>
 
 		<dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.0</version>
-        </dependency>
-        
-		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
         
-        <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
-		
-		<dependency>
-	        <groupId>org.thymeleaf</groupId>
-	        <artifactId>thymeleaf</artifactId>
-	    </dependency>
-	    
 	    <dependency>
             <groupId>vn.ehealth</groupId>
             <artifactId>vn-ehealth-auth-service</artifactId>
+            <version>1.0</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>vn.ehealth</groupId>
+            <artifactId>vn-ehealth-cdr-service</artifactId>
             <version>1.0</version>
         </dependency>
         
@@ -75,33 +65,11 @@
 		</dependency>
 		
 		<dependency>
-		    <groupId>javax.xml.bind</groupId>
-		    <artifactId>jaxb-api</artifactId>
-		</dependency>
-		<dependency>
-		    <groupId>com.sun.xml.bind</groupId>
-		    <artifactId>jaxb-impl</artifactId>
-		    <version>2.3.1</version>
-		</dependency>
-		
-		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-        
-        <dependency>
-            <groupId>org.openehealth.ipf.modules</groupId>
-            <artifactId>ipf-modules-cda-mdht</artifactId>
-            <version>3.6.3</version>
-        </dependency>
-
-		<dependency>
-			<groupId>com.opencsv</groupId>
-			<artifactId>opencsv</artifactId>
-			<version>3.8</version>
-		</dependency>
         
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
