--- a/vn-ehealth-emr-service/src/main/resources/application.properties
+++ b/vn-ehealth-emr-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8002
+server.port=8001
 #JWT
 app.jwtSecret=JWTSuperSecretKey
 app.jwtExpirationInMs=604800000
@@ -7,13 +7,13 @@ spring.servlet.multipart.enabled=true
 spring.jackson.serialization.indent_output=true
 
 #Mongo
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-
-spring.data.mongodb.host=emr.com.vn
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.username=emr
-spring.data.mongodb.password=abc@123
+
+#spring.data.mongodb.host=emr.com.vn
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.username=emr
+#spring.data.mongodb.password=abc@123
 spring.data.mongodb.database=emr
 #logging.level.org.springframework.data.mongodb.core.index=OFF
 
