--- a/vn-ehealth-emr-service/src/main/resources/application.properties
+++ b/vn-ehealth-emr-service/src/main/resources/application.properties
@@ -12,9 +12,14 @@ spring.jackson.serialization.indent_output=true
 
 spring.data.mongodb.host=34.87.24.163
 spring.data.mongodb.port=27017
+#spring.data.mongodb.username=fhir
+#spring.data.mongodb.password=abc@123
+#spring.data.mongodb.database=fhir
+
 spring.data.mongodb.username=emr
 spring.data.mongodb.password=abc@123
 spring.data.mongodb.database=emr
+
 #logging.level.org.springframework.data.mongodb.core.index=OFF
 
 spring.jackson.time-zone: Asia/Ho_Chi_Minh
