update service QuaTrinhBenhLy

--- a/vn-ehealth-emr-service/src/main/resources/observation_codes.properties
+++ b/vn-ehealth-emr-service/src/main/resources/observation_codes.properties
@@ -1,3 +1,7 @@
 lyDoVaoVien = http://loinc.org|10154-3|Chief complaint Narrative
 vaoNgayThu = http://loinc.org|56826-1|Problem frequency
 vaoLanThu = http://loinc.org|56825-3|Problem time course
+quaTrinhKhoiPhat = http://loinc.org|10164-2|History of Present illness Narrative
+mucDoVaDienBien = http://loinc.org|56817-0|Presenting problem
+viTri = http://loinc.org|11376-1|Injury location
+tongQuan = http://loinc.org|11323-3|General health - Reported
