--- a/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
+++ b/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
@@ -21,3 +21,14 @@ vi_tri_mau_sinh_thiet = https://fhir.emr.com.vn/CodeSystem/DMViTriMauSinhThiet
 #chua co
 thuoc = https://fhir.emr.com.vn/CodeSystem/DMThuoc
 duong_dung_thuoc = https://fhir.emr.com.vn/CodeSystem/DMDuongDungThuoc
+
+####EMR
+trang_thai_di_ung = http://hl7.org/fhir/ValueSet/allergyintolerance-clinical
+
+san_pham_di_ung = http://hl7.org/fhir/ValueSet/substance-code
+
+vi_tri_di_ung = http://hl7.org/fhir/ValueSet/route-codes
+
+phan_ung_di_ung = http://hl7.org/fhir/ValueSet/clinical-findings
+
+muc_do_nghiem_trong = http://hl7.org/fhir/allergy-intolerance-criticality
