--- a/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
+++ b/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
@@ -32,3 +32,5 @@ vi_tri_di_ung = http://hl7.org/fhir/ValueSet/route-codes
 phan_ung_di_ung = http://hl7.org/fhir/ValueSet/clinical-findings
 
 muc_do_nghiem_trong = http://hl7.org/fhir/allergy-intolerance-criticality
+
+chat_di_ung = http://hl7.org/fhir/ValueSet/allergyintolerance-code
