--- a/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
+++ b/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
@@ -9,7 +9,7 @@ route-codes = http://hl7.org/fhir/ValueSet/route-codes
 clinical-findings = http://hl7.org/fhir/ValueSet/clinical-findings
 allergy-intolerance-criticality = http://hl7.org/fhir/allergy-intolerance-criticality
 allergyintolerance-code = http://hl7.org/fhir/ValueSet/allergyintolerance-code
-
+vaccine-code = http://hl7.org/fhir/ValueSet/vaccine-code
 
 #emr.com.vn
 DiaDdanhHanhChinh = https://fhir.emr.com.vn/DiaDdanhHanhChinh-v1.0
