update api sua chi tiet benh nhan

--- a/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
+++ b/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
@@ -24,3 +24,4 @@ DichKetQuaXetNghiem=https://fhir.emr.com.vn/CodeSystem/DichKetQuaXetNghiem
 ViTriMauSinhThiet = https://fhir.emr.com.vn/CodeSystem/ViTriMauSinhThiet
 Thuoc = https://fhir.emr.com.vn/CodeSystem/Thuoc
 DuongDungThuoc = https://fhir.emr.com.vn/CodeSystem/DuongDungThuoc
+doituongbaohiem = ".../CodeSystem/doituongBHYT"
