--- a/vn-ehealth-hl7-fhir-core/src/main/resources/extension_urls.properties
+++ b/vn-ehealth-hl7-fhir-core/src/main/resources/extension_urls.properties
@@ -4,6 +4,7 @@ dantoc = https://fhir.emr.com.vn/StructureDefinition/Extension-Race-v1.0
 tongiao = https://fhir.emr.com.vn/StructureDefinition/Extension-Ethic-v1.0
 nghe_nghiep = https://fhir.emr.com.vn/StructureDefinition/Extension-EmploymentTitle-v1.0
 quoctich = https://fhir.emr.com.vn/StructureDefinition/Extension-Nationality-v1.0
+doituongbaohiem = ".../CodeSystem/doituongBHYT"
  	  
 # Phau thuat thu thuat 	  
 pttt.trinhtu = https://fhir.emr.com.vn/StructureDefinition/Extension-ProcedureExplaination-v1.0
