--- a/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
+++ b/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
@@ -25,3 +25,6 @@ ViTriMauSinhThiet = https://fhir.emr.com.vn/CodeSystem/ViTriMauSinhThiet
 Thuoc = https://fhir.emr.com.vn/CodeSystem/Thuoc
 DuongDungThuoc = https://fhir.emr.com.vn/CodeSystem/DuongDungThuoc
 doituongbaohiem = ".../CodeSystem/doituongBHYT"
+noikcbbd = "https://www.hl7.org/fhir/valueset-identifier-type.html"
+muchuongbhyt = "../MuchuongBHYT"
+bhlientiep5nam = "../BHYT5nam"
