--- a/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
+++ b/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
@@ -24,6 +24,7 @@ DichKetQuaXetNghiem=https://fhir.emr.com.vn/CodeSystem/DichKetQuaXetNghiem
 ViTriMauSinhThiet = https://fhir.emr.com.vn/CodeSystem/ViTriMauSinhThiet
 Thuoc = https://fhir.emr.com.vn/CodeSystem/Thuoc
 DuongDungThuoc = https://fhir.emr.com.vn/CodeSystem/DuongDungThuoc
+ThoiDiemDungThuoc = https://fhir.emr.com.vn/CodeSystem/ThoiDiemDungThuoc
 doituongbaohiem = ".../CodeSystem/doituongBHYT"
 noikcbbd = "https://www.hl7.org/fhir/valueset-identifier-type.html"
 muchuongbhyt = "../MuchuongBHYT"
