--- a/vn-ehealth-cdr-service/src/main/resources/fields_convert.properties
+++ b/vn-ehealth-cdr-service/src/main/resources/fields_convert.properties
@@ -219,3 +219,4 @@ emrDmNuoiDuong=dmNuoiDuong
 emrDmChamSoc=dmChamSoc
 emrDmKieuDieuTri=dmKieuDieutri
 emrDmDapUng=dmDapUng
+chisobt=chiSoBinhThuong
