--- a/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
+++ b/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
@@ -17,12 +17,12 @@ TonGiao = https://teminology.emr.com.vn/CodeSystem/TonGiao-v1.0
 DanToc = https://teminology.emr.com.vn/CodeSystem/DanToc-v1.0
 NgheNghiep = https://teminology.emr.com.vn/CodeSystem/NgheNghiep-v1.0
 QuocGia = https://teminology.emr.com.vn/CodeSystem/QuocGia-v1.0
-DVKyThuat = https://fhir.emr.com.vn/CodeSystem/DVKyThuat
+DVKyThuat = https://fhir.emr.com.vn/CodeSystem/DMDVKyThuat
 VaiTroPTTT = https://fhir.emr.com.vn/CodeSystem/VaiTroPTTT
 ChiSoXetNghiem = https://fhir.emr.com.vn/CodeSystem/ChiSoXetNghiem
 DichKetQuaXetNghiem=https://fhir.emr.com.vn/CodeSystem/DichKetQuaXetNghiem
 ViTriMauSinhThiet = https://fhir.emr.com.vn/CodeSystem/ViTriMauSinhThiet
-Thuoc = https://fhir.emr.com.vn/CodeSystem/Thuoc
+Thuoc = https://fhir.emr.com.vn/CodeSystem/DMThuoc
 DuongDungThuoc = https://fhir.emr.com.vn/CodeSystem/DuongDungThuoc
 ThoiDiemDungThuoc = https://fhir.emr.com.vn/CodeSystem/ThoiDiemDungThuoc
 doituongbaohiem = ".../CodeSystem/doituongBHYT"
