--- a/vn-ehealth-emr-service/src/main/resources/application.properties
+++ b/vn-ehealth-emr-service/src/main/resources/application.properties
@@ -13,9 +13,9 @@ spring.jackson.serialization.indent_output=true
 spring.data.mongodb.host=35.226.75.25
 spring.data.mongodb.port=27017
 
-spring.data.mongodb.username=emr_new
+spring.data.mongodb.username=emr
 spring.data.mongodb.password=abc@123
-spring.data.mongodb.database=emr_new
+spring.data.mongodb.database=emr
 
 #logging.level.org.springframework.data.mongodb.core.index=OFF
 
