update danh muc

--- a/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
+++ b/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
@@ -12,6 +12,7 @@ allergyintolerance-code = http://hl7.org/fhir/ValueSet/allergyintolerance-code
 vaccine-code = http://hl7.org/fhir/ValueSet/vaccine-code
 
 #emr.com.vn
+
 DiaDdanhHanhChinh = https://fhir.emr.com.vn/DiaDdanhHanhChinh-v1.0
 TonGiao = https://teminology.emr.com.vn/CodeSystem/TonGiao-v1.0
 DanToc = https://teminology.emr.com.vn/CodeSystem/DanToc-v1.0
@@ -29,3 +30,13 @@ doituongbaohiem = ".../CodeSystem/doituongBHYT"
 noikcbbd = "https://www.hl7.org/fhir/valueset-identifier-type.html"
 muchuongbhyt = "../MuchuongBHYT"
 bhlientiep5nam = "../BHYT5nam"
+#list_10_dm_bo_sung
+icd-9=http://hl7.org/fhir/sid/icd-9
+DanhMucTuongDuongICD9 = https://fhir.emr.com.vn/DanhMucTuongDuongICD9-v1.0
+DanhMucTrieuChungTheoICD10 = https://fhir.emr.com.vn/DanhMucTrieuChungTheoICD10-v1.0
+DanhMucPhatHienLamSang = https://fhir.emr.com.vn/DanhMucPhatHienLamSang-v1.0
+DanhMucTacNhanGayDiUng = https://fhir.emr.com.vn/DanhMucTacNhanGayDiUng-v1.0
+DanhMucVaccine_CDC = https://fhir.emr.com.vn/DanhMucVaccine_CDC-v1.0
+DanhMucGiaiPhau = https://fhir.emr.com.vn/DanhMucGiaiPhau-v1.0
+
+
