--- a/vn-ehealth-hl7-fhir/src/main/resources/application.properties
+++ b/vn-ehealth-hl7-fhir/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.data.mongodb.port=27017
 #spring.data.mongodb.password=abc@123
 #spring.data.mongodb.database=fhir
 
-spring.data.mongodb.username=emr_new
+spring.data.mongodb.username=emr
 spring.data.mongodb.password=abc@123
-spring.data.mongodb.database=emr_new
+spring.data.mongodb.database=emr
 
 spring.jackson.time-zone: Asia/Ho_Chi_Minh
 #spring.jackson.deserialization.adjust_dates_to_context_time_zone=false
