--- a/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
+++ b/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
@@ -31,6 +31,8 @@ noikcbbd = "https://www.hl7.org/fhir/valueset-identifier-type.html"
 muchuongbhyt = "../MuchuongBHYT"
 bhlientiep5nam = "../BHYT5nam"
 #list_10_dm_bo_sung
+icd-9-kcb=https://fhir.emr.com.vn/icd-9-kcb-v1.0
+icd-10-kcb=https://fhir.emr.com.vn/icd-10-kcb-v1.0
 icd-9=http://hl7.org/fhir/sid/icd-9
 DanhMucTuongDuongICD9 = https://fhir.emr.com.vn/DanhMucTuongDuongICD9-v1.0
 DanhMucTrieuChungTheoICD10 = https://fhir.emr.com.vn/DanhMucTrieuChungTheoICD10-v1.0
