--- a/vn-ehealth-emr-service/src/main/resources/application.properties
+++ b/vn-ehealth-emr-service/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-server.port=8001
+server.port=8002
 #JWT
 app.jwtSecret=JWTSuperSecretKey
 app.jwtExpirationInMs=604800000
 
 spring.servlet.multipart.enabled=true
-spring.jackson.serialization.indent_output=true
+spring.jackson.serialization.INDENT_OUTPUT=true
 
 #Mongo
 #spring.data.mongodb.host=localhost
@@ -13,9 +13,9 @@ spring.jackson.serialization.indent_output=true
 spring.data.mongodb.host=35.226.75.25
 spring.data.mongodb.port=27017
 
-spring.data.mongodb.username=emr
+spring.data.mongodb.username=emr_new
 spring.data.mongodb.password=abc@123
-spring.data.mongodb.database=emr
+spring.data.mongodb.database=emr_new
 
 #logging.level.org.springframework.data.mongodb.core.index=OFF
 
