--- a/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
+++ b/vn-ehealth-hl7-fhir-core/src/main/resources/code_systems.properties
@@ -40,5 +40,7 @@ DanhMucPhatHienLamSang = https://fhir.emr.com.vn/DanhMucPhatHienLamSang-v1.0
 DanhMucTacNhanGayDiUng = https://fhir.emr.com.vn/DanhMucTacNhanGayDiUng-v1.0
 DanhMucVaccine_CDC = https://fhir.emr.com.vn/DanhMucVaccine_CDC-v1.0
 DanhMucGiaiPhau = https://fhir.emr.com.vn/DanhMucGiaiPhau-v1.0
+DanhMucCoSoYte = https://fhir.emr.com.vn/DanhMucCoSoYte-v1.0
+DanhMucICF = https://fhir.emr.com.vn/DanhMucICF-v1.0
 
 
